<resources>
    <string name="app_name">Movies</string>
    <string name="title_movies">Movies</string>
    <string name="title_people">People</string>
    <string name="title_settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="release_date">Release date</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
</resources>
