<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.raywenderlich.movies.ui.movies.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.raywenderlich.movies.ui.dashboard.DashboardFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.raywenderlich.movies.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>
