<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingVertical="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="96dp"
            android:layout_height="144dp"
            android:id="@+id/movie_image"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="16sp"
                android:textColor="@color/colorSecondary"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/release_date"
                android:textColor="@color/colorSecondary"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="12sp"
                android:textColor="@color/colorSecondaryOpacity"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>